--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
 shamefully-hoist=true
+electron_mirror=https://npmmirror.com/mirrors/electron/
+electron_builder_binaries_mirror=https://npmmirror.com/mirrors/electron-builder-binaries/
+cache=D:/temp/npm-cache
+registry=https://registry.npmjs.org/
+network-timeout=600000
+fetch-retry-mintimeout=20000
+fetch-retry-maxtimeout=120000
