--- a/package.json
+++ b/package.json
@@ -15,14 +15,22 @@
     "start": "electron-vite preview",
     "postinstall": "electron-builder install-app-deps",
     "vite:build:app": "electron-vite build",
-    "electron:build:win": "electron-builder --win",
+    "electron:build:win": "electron-builder --win --config electron-builder.yml",
     "electron:build:mac": "electron-builder --mac",
     "electron:build:linux": "electron-builder --linux",
     "electron:build:dir": "electron-builder --dir",
     "build:unpack": "run-s vite:build:app electron:build:dir",
     "build:win": "run-s vite:build:app electron:build:win",
     "build:mac": "run-s vite:build:app electron:build:mac",
-    "build:linux": "run-s vite:build:app electron:build:linux"
+    "build:linux": "run-s vite:build:app electron:build:linux",
+    "build:local": "node build-local.js",
+    "prebuild": "npm run build",
+    "dist:dir": "npm run build && electron-builder --dir",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:linux": "npm run build && electron-builder --linux",
+    "dist:all": "npm run build && electron-builder -mwl",
+    "icon:generate": "electron-icon-builder --input=./resources/build/icon.svg --output=./resources/build/ --flatten"
   },
   "repository": {
     "type": "git",
@@ -42,6 +50,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
+    "motion": "^12.16.0",
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.2"
   },
@@ -55,6 +64,7 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "cross-env": "^7.0.3",
     "electron": "^36.3.2",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
@@ -69,6 +79,7 @@
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "electron-icon-builder": "^2.0.1"
   }
 }
